# advent_of_code_2025

./: README.md
common/src/AoC/: Common.hs
common/src/AoC/Common/: Output.hs  Runner.hs
day_01/: day01.cabal  dial.hs
day_01/src/: day01.hs
day_01/src/AoC/Day01/: Dial.hs
day_01/src/Day01/: Dial.hs
day_01/test/: day01-test.hs
day_01/test/AoC/Day01/: DialTest.hs
day_01/test/Day01/: DialTest.hs
day_02/: day02.cabal
day_02/src/: day02.hs
day_02/src/AoC/Day02/: ProductIds.hs
day_02/src/Day02/: ProductIds.hs
day_02/test/: day02-test.hs
day_02/test/AoC/Day02/: ProductIdsTest.hs
day_02/test/Day02/: ProductIdsTest.hs
day_03/: day03.cabal
day_03/src/: day03.hs
day_03/src/AoC/Day03/: Joltage.hs
day_03/test/: day03-test.hs
day_03/test/AoC/Day03/: JoltageTest.hs
