cabal-version:      2.4
name:               day01
version:            0.1.0.0

executable day01
    main-is:          day01.hs
    other-modules:    Day01.Dial
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test-day01
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, src
    main-is:          day01-test.hs
    other-modules:    Day01.Dial,
                      Day01.DialTest
    build-depends:    base ^>=4.17.0.0,
                      HUnit
    default-language: Haskell2010