cabal-version:      2.4
name:               day02
version:            0.1.0.0

executable day02
    main-is:          day02.hs
    other-modules:    Day02.ProductIds
    build-depends:    base ^>=4.17.0.0,
                      split
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test-day02
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, src
    main-is:          day02-test.hs
    other-modules:    Day02.ProductIds,
                      Day02.ProductIdsTest
    build-depends:    base ^>=4.17.0.0,
                      split,
                      HUnit
    default-language: Haskell2010