cabal-version:      2.4
name:               day03
version:            0.1.0.0

executable day03
    main-is:          day03.hs
    other-modules:    AoC.Common,
                      AoC.Day03.Joltage
    build-depends:    base ^>=4.17.0.0,
                      split
    hs-source-dirs:   src, ../common/src
    default-language: Haskell2010

test-suite test-day03
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, src
    main-is:          day03-test.hs
    other-modules:    AoC.Day03.Joltage,
                      AoC.Day03.JoltageTest
    build-depends:    base ^>=4.17.0.0,
                      HUnit
    default-language: Haskell2010